#+STARTUP:showall
* NEWS (user visible changes & bigger non-visible ones)

* 1.11.x (unreleased development build)

*** mu

    - ~mu~ commands ~extract~, ~verify~ and ~view~ can now read the message from
      standard input; see their man-pages for details

    - experimental: if you build ~mu~ with [[https://github.com/CLD2Owners/cld2][CLD2]] support (available in many Linux
      distros), ~mu~ will try to detect the language of the body of e-mail
      messages; you can then search by their ISO-639-1 code, e.g. ~mu find
      lang:en~

*** mu4e

    - experimental: support folding message threads (with TAB / S-TAB).
      See the [[info:mu4e:Folding threads][manual entry]] for further details.

    - mailing list support was modernized a bit; the format changed (see the
      ~mu4e-mailing-lists~ and ~mu4e-user-mailing-lists~ docstrings. There is
      ~M-x mu4e-mailing-list-info-refresh~ to update to the new values after
      changing them.

    - also, there are now actions ('a' in view/header) to get to online archives
      for some (selected) mailing-list archives.


* 1.10 (released on March 26, 2023)

*** mu

   - a new command-line parser, which allows (hopefully!) for a better user
     interaction; better error checking and more

   - Invalid e-mail addresses are no longer added to the contacts-cache.

   - The ~cfind~ command gained ~--format=json~, which makes it easy to further
     process contact information, e.g. using ~jq~. See the manpage for more
     details.

   - The ~init~ command learned ~--reinit~ to reinitialize the database with the
     setings of an existing one

   - The ~script~ command is gone, and integrated with ~mu~ directly, i.e. the
     scripts (when enabled) are directly visible in the ~mu~ output. Also see the
     Guile section.

   - The ~extract~ command gained the ~--uncooked~ option to tell it to _not_ replace
     spaces with dashes in extracted filenames (and a few other things).
